--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+<div id="ccnet">
+  
+  <a id="H" onclick="" target="_blank">Mods</a>  
+<div id="Links">
+  <a id="MHN" href="https://www.Moddinghub.net" onclick="" target="_blank">|Moddinghub.net|</a> 
+  <a id="discord" href="https://discord.gg/syCVck39" onclick="" target="_blank">|My Discord Server|</a>
+  <a id="Contact" href="Pages/Contact.html" onclick="">|Contact|</a>
+  <a id="Open" href="Pages/Webhook.html" onclick="BETA()">|Webhook Messager|</a>
+  <a id="Template" href="https://github.com/tnuser3/Website-Templates" onclick="BETA()">|Website Templates|</a>
+
+</div>
+</div>
+<script>
+
+ </script>
+<script src="Javascript/main.js"></script>
+<link rel="stylesheet" type="text/css" href="CSS/Mystyle.css">
+</body>
+</html>
+ 
